# dataframe-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: dftk-code-reviewer.md  dftk-test-writer.md  stattools-code-reviewer.md  stattools-test-writer.md
.github/workflows/: ci.yaml  publish.yaml
src/dftk/: __init__.py  cli.py  io.py
src/dftk/commands/: __init__.py  annotate_cmd.py  base.py  binx_cmd.py  clean_cmd.py  concat_cmd.py  corr_cmd.py  dataset_cmd.py  describe_cmd.py  eval_cmd.py  fit_cmd.py  func_cmd.py  help.py  hist_cmd.py  info_cmd.py  interp_cmd.py  line_cmd.py  melt_cmd.py  merge_cmd.py  pivot_cmd.py  print_cmd.py  query_cmd.py  randvar_cmd.py  sample_cmd.py  scale_cmd.py  scat_cmd.py  segid_cmd.py  split_cmd.py  stat_cmd.py  test_cmd.py  transpose_cmd.py  wstat_cmd.py
src/dftk/common/: __init__.py  io.py  plot.py  seed.py  seq.py  stats.py
src/stattools/: __init__.py  cli.py  io.py
src/stattools/commands/: __init__.py  annotate_cmd.py  base.py  binx_cmd.py  clean_cmd.py  concat_cmd.py  corr_cmd.py  dataset_cmd.py  describe_cmd.py  eval_cmd.py  fit_cmd.py  func_cmd.py  help.py  hist_cmd.py  interp_cmd.py  line_cmd.py  melt_cmd.py  merge_cmd.py  pivot_cmd.py  print_cmd.py  query_cmd.py  randvar_cmd.py  sample_cmd.py  scale_cmd.py  scat_cmd.py  split_cmd.py  stat_cmd.py  test_cmd.py  wstat_cmd.py
src/stattools/common/: __init__.py  io.py  plot.py  seed.py  seq.py  stats.py
tests/: bench_pipeline.py  conftest.py  test_cli.py
tests/commands/: test_annotate.py  test_binx.py  test_concat.py  test_corr.py  test_dataset.py  test_describe.py  test_eval.py  test_fit.py  test_func.py  test_info.py  test_interp.py  test_melt.py  test_merge.py  test_pivot.py  test_plots.py  test_query.py  test_randvar.py  test_sample.py  test_scale.py  test_segid.py  test_split.py  test_stat.py  test_test_cmd.py  test_transpose.py  test_wstat.py
tests/common/: test_plot.py  test_seed.py  test_seq.py  test_stats.py  test_validation.py
