[project]
name = "dataframe-toolkit"
version = "0.5.2"
description = "A command-line toolkit for DataFrame analysis and manipulation"
readme = "README.md"
authors = [
    { name = "Gunnar Pálsson", email = "hemingur@gmail.com" }
]
license = { text = "MIT" }
keywords = ["dataframe", "statistics", "data analysis", "CLI", "TSV", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "duckdb>=0.8",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
]

[project.urls]
Homepage = "https://github.com/hemingur/dataframe-toolkit"
Repository = "https://github.com/hemingur/dataframe-toolkit"

[project.scripts]
dftk = "dftk.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dftk"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["dftk"]
